force-app/main/default/objects/Partner_Agreement__c/Partner_Agreement__c.object-meta.xml
<CustomObject>
    <label>Partner Agreement</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Agreement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>