force-app/main/default/objects/Partner_Agreement__c/fields/Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Link__c</fullName>
    <formula>HYPERLINK(Agreement_URL__c, Agreement_URL__c, &#39;new&#39;)</formula>
    <label>Agreement Link (Generate PDF)</label>
    <type>Text</type>
</CustomField>