force-app/main/default/objects/Partner_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <formula>TEXT(Partner_Agreement_Template__r.Agreement_Type__c)</formula>
    <label>Agreement Type</label>
    <type>Text</type>
</CustomField>