force-app/main/default/objects/Partner_Agreement__c/fields/Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_URL__c</fullName>
    <formula>&quot;https://weecycle--partial--c.visualforce.com/apex/PartnerAgreementPDF?id=&quot; + Id</formula>
    <label>Agreement URL</label>
    <type>Text</type>
</CustomField>