force-app/main/default/objects/Partner_Agreement__c/fields/Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Behalf_Of__c</fullName>
    <formula>&quot;I, &lt;b&gt;&quot; &amp; Partner_Executive_Director__r.FirstName &amp; &quot; &quot; &amp; Partner_Executive_Director__r.LastName &amp; &quot;&lt;/b&gt;, on behalf of &lt;b&gt;&quot; &amp;  Partner__r.Name &amp; &quot; (\&quot;Agency\&quot;)&lt;/b&gt; &quot; &amp;  Partner_Agreement_Template__r.Behalf_Of_Suffix__c</formula>
    <label>Behalf Of</label>
    <type>Text</type>
</CustomField>