force-app/main/default/objects/Partner_Agreement__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <formula>CreatedDate</formula>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>