force-app/main/default/objects/Partner_Agreement__c/fields/Date_Signed_By_Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_By_Executive_Director__c</fullName>
    <label>Date Signed By WeeCycle</label>
    <type>DateTime</type>
</CustomField>