force-app/main/default/objects/Partner_Agreement__c/fields/Date_Signed_By_Partner__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_By_Partner__c</fullName>
    <label>Date Signed By Partner</label>
    <type>DateTime</type>
</CustomField>