force-app/main/default/objects/Partner_Agreement__c/fields/Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WeeCycle Executive Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>