force-app/main/default/objects/Partner_Agreement__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Partner must be an Organization Account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Agreements</relationshipLabel>
    <relationshipName>Partner_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>