force-app/main/default/objects/Partner_Agreement__c/fields/Partner_Agreement_Template__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agreement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Agreement Template</label>
    <referenceTo>Partner_Agreement_Template__c</referenceTo>
    <relationshipLabel>Partner Agreements</relationshipLabel>
    <relationshipName>Partner_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>