force-app/main/default/objects/Partner_Agreement__c/fields/Partner_Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Partner_Executive_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Executive Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Agreements</relationshipLabel>
    <relationshipName>Partner_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>