force-app/main/default/objects/Partner_Agreement__c/fields/PDF_File_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_File_Name__c</fullName>
    <label>PDF File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>