force-app/main/default/objects/Partner_Agreement__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <label>Renewal?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>NEW</label>
            </value>
            <value>
                <fullName>RENEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>