force-app/main/default/objects/Partner_Agreement__c/fields/Shared_PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>Shared_PDF_Link__c</fullName>
    <formula>HYPERLINK(Shared_PDF_URL__c,  PDF_File_Name__c , &#39;new&#39;)</formula>
    <label>Shared PDF Link</label>
    <type>Text</type>
</CustomField>