force-app/main/default/objects/Partner_Agreement__c/fields/Shared_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Shared_PDF_URL__c</fullName>
    <label>Shared PDF URL</label>
    <type>Url</type>
</CustomField>