force-app/main/default/objects/Partner_Agreement__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Partner_Agreement_Template__r.Full_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>