force-app/main/default/objects/Partner_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Renewal__c</columns>
    <columns>Date_Created__c</columns>
    <columns>Date_Signed_By_Partner__c</columns>
    <columns>Partner_Agreement_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>